--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 sudo: required
 language: python
 python:
-  - "2.7"
+  - "3.4"
 
 install:
   - pip install -r requirements.txt
 
 script:
-  - python manage.py test
+  - python3 manage.py test
