Updated travis config - building and pushing docker image

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,16 @@ language: python
 python:
   - "3.4"
 
+services:
+  - docker
+
 install:
   - pip install -r requirements.txt
 
 script:
   - python3 manage.py test
+  - docker build -t $DOCKER_USERNAME/uks:latest .
+
+after_success:
+  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
+  - docker push $DOCKER_USERNAME/uks:latest
