changed docker file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,3 +29,20 @@ services:
 #
 #    # We don't build our own image, we pull from dockerhub
 #    image: "redis:alpine"
+
+  logstash:
+    labels:
+      com.example.service: "logstash"
+      com.example.description: "For logging data"
+    image: logstash:5.4.3
+    container_name: myapp_logstash
+    volumes:
+      - ./config/logstash:/logstash_dir
+    links:
+      - syslog
+    log_driver: syslog
+    # command: logstash -f /logstash_dir/logstash.conf
+    environment:
+      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
+    ports:
+      - "5959:5959"
